--- a/package.json
+++ b/package.json
@@ -6,17 +6,28 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/server.js"
+    "dev": "nodemon ./public/js/Server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "mysql": "^2.18.1",
-    "typescript": "^4.7.4"
+    "@types/body-parser": "^1.19.2",
+    "@types/mysql": "^2.15.21",
+    "cors": "^2.8.5",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.18"
-  }
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.1",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.18",
+    "typescript": "^4.7.4"
+  },
+  "imports": {
+    "lodash": "/node_modules/lodash-es/lodash.js",
+    "lodash/": "/node_modules/lodash-es/"
+  },
+  "extension": "js"
 }
